--- a/todo.html
+++ b/todo.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <title>Simple Todo - using Backbone JS</title>
+    <link rel="stylesheet" href="styles/style.css">
+    
 </head>
 
 
