--- a/todo.html
+++ b/todo.html
@@ -42,9 +42,11 @@
     </div>
 
     <script>
+        var TodoApp = TodoApp || {};
+       
         //Initialize the app
-        var appView = new AppView();
-        appView.render();
+        new TodoApp.AppView().render();
+        
     </script>
 </body>
 
